Finalize Mod 11 Lab

--- a/Instructions/Labs/AZ-203_01_lab.md
+++ b/Instructions/Labs/AZ-203_01_lab.md
@@ -107,7 +107,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
     -   Publish: **Code**
 
-    -	Runtime stack: **.NET Core 3.0**
+    -	Runtime stack: **.NET 3.0**
 
     -	Operating System: **Windows**
 
@@ -139,7 +139,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 1.  In the **Properties** section, copy the value of the **URL** box. You'll use this value later in the lab.
 
-#### Task 6: Deploy an ASP.NET Core web application to Web Apps
+#### Task 6: Deploy an ASP.NET web application to Web Apps
 
 1.  Using Visual Studio Code, open the web application in the **Allfiles (F):\\Allfiles\\Labs\\01\\Starter\\API** folder.
 
@@ -193,7 +193,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 #### Review
 
-In this exercise, you created a web app in Azure and then deployed your ASP.NET Core web application to Web Apps by using the Azure CLI and the Kudu zip file deployment utility.
+In this exercise, you created a web app in Azure and then deployed your ASP.NET web application to Web Apps by using the Azure CLI and the Kudu zip file deployment utility.
 
 ### Exercise 2: Build a front-end web application by using Azure Web Apps
 
@@ -207,7 +207,7 @@ In this exercise, you created a web app in Azure and then deployed your ASP.NET 
 
     -   Publish: **Code**
 
-    -	Runtime stack: **.NET Core 3.0**
+    -	Runtime stack: **.NET 3.0**
 
     -	Operating system: **Windows**
 
@@ -237,7 +237,7 @@ In this exercise, you created a web app in Azure and then deployed your ASP.NET 
 
 1.  Save your changes to the application settings.
 
-#### Task 3: Deploy an ASP.NET Core web application to Web Apps
+#### Task 3: Deploy an ASP.NET web application to Web Apps
 
 1.  Using Visual Studio Code, open the web application in the **Allfiles (F):\\Allfiles\\Labs\\01\\Starter\\Web** folder.
 
