--- a/Instructions/Labs/AZ-203_03_lab.md
+++ b/Instructions/Labs/AZ-203_03_lab.md
@@ -119,13 +119,13 @@ In this exercise, you created a new Storage account to use throughout the remain
 
 In this exercise, you created a couple of placeholder containers in the storage account and populated one of the containers with a blob.
 
-### Exercise 3: Access containers by using the .NET Core SDK
+### Exercise 3: Access containers by using the .NET SDK
 
-#### Task 1: Create .NET Core project
+#### Task 1: Create .NET project
 
 1.  Using Visual Studio Code, open the **Allfiles (F):\\Allfiles\\Labs\\03\\Starter\\BlobManager** folder.
 
-1.  Using a terminal, create a new .NET Core project named **BlobManager** in the current folder:
+1.  Using a terminal, create a new .NET project named **BlobManager** in the current folder:
 
     ```
     dotnet new console --name BlobManager --output .
@@ -141,7 +141,7 @@ In this exercise, you created a couple of placeholder containers in the storage 
 
     > **Note**: The **dotnet add package** command will add the **Azure.Storage.Blobs** package from NuGet. For more information, go to [Azure.Storage.Blobs](https://www.nuget.org/packages/Azure.Storage.Blobs/12.0.0).
 
-1.  Using the same terminal, build the .NET Core web application:
+1.  Using the same terminal, build the .NET web application:
 
     ```
     dotnet build
@@ -209,7 +209,7 @@ In this exercise, you created a couple of placeholder containers in the storage 
 
 1.  Save the **Program.cs** file.
 
-1.  Using a terminal, run the ASP.NET Core web application project:
+1.  Using a terminal, run the ASP.NET web application project:
 
     ```
     dotnet run
@@ -248,7 +248,7 @@ In this exercise, you created a couple of placeholder containers in the storage 
 
 1.  Save the **Program.cs** file.
 
-1.  Using a terminal, run the ASP.NET Core web application project:
+1.  Using a terminal, run the ASP.NET web application project:
 
     ```
     dotnet run
@@ -264,7 +264,7 @@ In this exercise, you created a couple of placeholder containers in the storage 
 
 In this exercise, you accessed existing containers by using the Storage SDK. 
 
-### Exercise 4: Retrieve blob Uniform Resource Identifiers (URIs) by using the .NET Core SDK
+### Exercise 4: Retrieve blob Uniform Resource Identifiers (URIs) by using the .NET SDK
 
 #### Task 1: Enumerate the blobs in an existing container by using the SDK
 
@@ -311,7 +311,7 @@ In this exercise, you accessed existing containers by using the Storage SDK.
 
 1.  Save the **Program.cs** file.
 
-1.  Using a terminal, run the ASP.NET Core web application project:
+1.  Using a terminal, run the ASP.NET web application project:
 
     ```
     dotnet run
@@ -366,7 +366,7 @@ In this exercise, you accessed existing containers by using the Storage SDK.
 
 1.  Save the **Program.cs** file.
 
-1.  Using a terminal, run the ASP.NET Core web application project:
+1.  Using a terminal, run the ASP.NET web application project:
 
     ```
     dotnet run
@@ -436,7 +436,7 @@ In this exercise, you accessed existing containers by using the Storage SDK.
 
 1.  Save the **Program.cs** file.
 
-1.  Using a terminal, run the ASP.NET Core web application project:
+1.  Using a terminal, run the ASP.NET web application project:
 
     ```
     dotnet run
