--- a/Instructions/Labs/AZ-203_04_lab.md
+++ b/Instructions/Labs/AZ-203_04_lab.md
@@ -225,13 +225,13 @@ In this exercise, you created all the Azure resources that you'll need for a pol
 
 In this exercise, you imported all the resources that you'll use with your web application.
 
-### Exercise 3: Open and configure a .NET Core web application
+### Exercise 3: Open and configure a .NET web application
 
 #### Task 1: Open and build the web application
 
 1.  Using Visual Studio Code, open the solution folder found at **Allfiles (F):\\Allfiles\\Labs\\04\\Starter\\AdventureWorks**.
 
-1.  Using a terminal, build the .NET Core solution:
+1.  Using a terminal, build the .NET solution:
 
     ```
     dotnet build
@@ -265,7 +265,7 @@ In this exercise, you imported all the resources that you'll use with your web a
     cd .\AdventureWorks.Web\
     ```
 
-1.  Using the same terminal, run the ASP.NET Core web application project:
+1.  Using the same terminal, run the ASP.NET web application project:
 
     ```
     dotnet run
@@ -295,13 +295,13 @@ In this exercise, you imported all the resources that you'll use with your web a
 
 #### Review
 
-In this exercise, you configured your ASP.NET Core web application to connect to your resources in Azure.
+In this exercise, you configured your ASP.NET web application to connect to your resources in Azure.
 
 ### Exercise 4: Migrating SQL data to Azure Cosmos DB
 
 #### Task 1: Create a migration project
 
-1.  Using a terminal, create a new .NET Core project named **AdventureWorks.Migrate** in a folder with the same name:
+1.  Using a terminal, create a new .NET project named **AdventureWorks.Migrate** in a folder with the same name:
 
     ```
     dotnet new console --name AdventureWorks.Migrate
@@ -347,7 +347,7 @@ In this exercise, you configured your ASP.NET Core web application to connect to
 
     > **Note**: The **dotnet add package** command will add the **Microsoft.Azure.Cosmos** package from **NuGet**. For more information, go to: [Microsoft.Azure.Cosmos](https://www.nuget.org/packages/Microsoft.Azure.Cosmos/3.4.1).
 
-1.  Using the same terminal, build the .NET Core web application:
+1.  Using the same terminal, build the .NET web application:
 
     ```
     dotnet build
@@ -418,7 +418,7 @@ In this exercise, you configured your ASP.NET Core web application to connect to
     cd .\AdventureWorks.Migrate\
     ```
 
-1.  Using the same terminal, build the ASP.NET Core web application project:
+1.  Using the same terminal, build the ASP.NET web application project:
 
     ```
     dotnet build
@@ -460,7 +460,7 @@ In this exercise, you configured your ASP.NET Core web application to connect to
     cd .\AdventureWorks.Migrate\
     ```
 
-1.  Using the same terminal, build the ASP.NET Core web application project:
+1.  Using the same terminal, build the ASP.NET web application project:
 
     ```
     dotnet build
@@ -470,7 +470,7 @@ In this exercise, you configured your ASP.NET Core web application to connect to
 
 #### Task 5: Perform a migration
 
-1.  Using the same terminal, run the ASP.NET Core web application project:
+1.  Using the same terminal, run the ASP.NET web application project:
 
     ```
     dotnet run
@@ -508,7 +508,7 @@ In this exercise, you configured your ASP.NET Core web application to connect to
 
 In this exercise, you used Entity Framework and the .NET SDK for Azure Cosmos DB to migrate data from SQL Database to Azure Cosmos DB.
 
-### Exercise 5: Accessing Azure Cosmos DB by using .NET Core
+### Exercise 5: Accessing Azure Cosmos DB by using .NET
 
 #### Task 1: Update library with the Cosmos SDK and references
 
@@ -526,7 +526,7 @@ In this exercise, you used Entity Framework and the .NET SDK for Azure Cosmos DB
 
     > **Note**: The **dotnet add package** command will add the **Microsoft.Azure.Cosmos** package from **NuGet**. For more information, go to: [Microsoft.Azure.Cosmos](https://www.nuget.org/packages/Microsoft.Azure.Cosmos/3.4.1).
 
-1.  Using the same terminal, build the ASP.NET Core web application project:
+1.  Using the same terminal, build the ASP.NET web application project:
 
     ```
     dotnet build
@@ -534,7 +534,7 @@ In this exercise, you used Entity Framework and the .NET SDK for Azure Cosmos DB
 
 1.  Close the current terminal.
 
-#### Task 2: Write .NET Core code to connect to Azure Cosmos DB
+#### Task 2: Write .NET code to connect to Azure Cosmos DB
 
 1.  Create a new **AdventureWorks.Context/AdventureWorksCosmosContext.cs** file in Visual Studio Code.
 
@@ -649,7 +649,7 @@ In this exercise, you used Entity Framework and the .NET SDK for Azure Cosmos DB
     cd .\AdventureWorks.Context\
     ```
     
-1.  Using the same terminal, build the ASP.NET Core web application project:
+1.  Using the same terminal, build the ASP.NET web application project:
 
     ```
     dotnet build
@@ -667,7 +667,7 @@ In this exercise, you used Entity Framework and the .NET SDK for Azure Cosmos DB
 
 1.  Save the **appsettings.json** file.
 
-#### Task 4: Update .NET Core application startup logic
+#### Task 4: Update .NET application startup logic
 
 1.  Open the **AdventureWorks.Web/Startup.cs** file in Visual Studio Code.
 
@@ -698,7 +698,7 @@ In this exercise, you used Entity Framework and the .NET SDK for Azure Cosmos DB
     cd .\AdventureWorks.Web\
     ```
     
-1.  Using the same terminal, run the ASP.NET Core web application project:
+1.  Using the same terminal, run the ASP.NET web application project:
 
     ```
     dotnet run
