--- a/Instructions/Labs/AZ-203_05_lab.md
+++ b/Instructions/Labs/AZ-203_05_lab.md
@@ -9,7 +9,7 @@ lab:
 
 ## Lab scenario
 
-Your organization is seeking a way to automatically create virtual machines (VMs) to run tasks and immediately terminate. You're tasked with evaluating multiple compute services in Microsoft Azure and determining which service can help you automatically create VMs and install custom software on those machines. As a proof of concept, you have decided to try creating VMs from built-in images and container images so that you can compare the two solutions. To keep your proof of concept simple, you'll create a special “IP check” application written in .NET Core that you'll automatically deploy to your machines. Your proof of concept will evaluate the Azure Container Instances and Azure Virtual Machines services.
+Your organization is seeking a way to automatically create virtual machines (VMs) to run tasks and immediately terminate. You're tasked with evaluating multiple compute services in Microsoft Azure and determining which service can help you automatically create VMs and install custom software on those machines. As a proof of concept, you have decided to try creating VMs from built-in images and container images so that you can compare the two solutions. To keep your proof of concept simple, you'll create a special “IP check” application written in .NET that you'll automatically deploy to your machines. Your proof of concept will evaluate the Azure Container Instances and Azure Virtual Machines services.
 
 ## Objectives
 
@@ -159,7 +159,7 @@ In this exercise, you used Cloud Shell to create a VM as part of an automated sc
 
 1.  Change the active directory to **\~/clouddrive/ipcheck**.
 
-1.  Use the **dotnet new console --output . --name ipcheck** command to create a new .NET Core console application in the current directory.
+1.  Use the **dotnet new console --output . --name ipcheck** command to create a new .NET console application in the current directory.
 
 1.  Create a new file in the **\~/clouddrive/ipcheck** directory named **Dockerfile**.
 
@@ -169,7 +169,7 @@ In this exercise, you used Cloud Shell to create a VM as part of an automated sc
 
     > **Note**: You can open the editor by using the **code .** command or by selecting the editor button.
 
-#### Task 2: Create and test a .NET Core application
+#### Task 2: Create and test a .NET application
 
 1.  In the graphical editor, open the **Program.cs** file and replace its contents with the following code, and then save the file:
 
@@ -290,7 +290,7 @@ In this exercise, you used Cloud Shell to create a VM as part of an automated sc
 
 #### Review
 
-In this exercise, you created a .NET Core console application to display a machine’s current IP address. You then added the **Dockerfile** file to the application so that it could be converted into a Docker container image. Finally, you deployed the container image to Container Registry.
+In this exercise, you created a .NET console application to display a machine’s current IP address. You then added the **Dockerfile** file to the application so that it could be converted into a Docker container image. Finally, you deployed the container image to Container Registry.
 
 ### Exercise 3: Deploy an Azure container instance
 
