--- a/Instructions/Labs/AZ-203_10_lab.md
+++ b/Instructions/Labs/AZ-203_10_lab.md
@@ -19,7 +19,7 @@ After you complete this lab, you will be able to:
 
 -   Use the Azure Event Grid Viewer to subscribe to a topic and illustrate published messages
 
--   Publish a message from a .NET Core application
+-   Publish a message from a .NET application
 
 ## Lab setup
 
@@ -183,13 +183,13 @@ In this exercise, you created the Event Grid topic and Web App that you will use
 
 In this exercise, you created a new subscription, validated its registration and then recorded the credentials required to publish a new event to the topic.
 
-### Exercise 3: Publish Event Grid events from .NET Core
+### Exercise 3: Publish Event Grid events from .NET
 
-#### Task 1: Create .NET Core project
+#### Task 1: Create .NET project
 
 1.  Using Visual Studio Code, open the **Allfiles (F):\\Allfiles\\Labs\\10\\Starter\\EventPublisher** folder.
 
-1.  Using a terminal, create a new .NET Core project named **EventPublisher** in the current folder:
+1.  Using a terminal, create a new .NET project named **EventPublisher** in the current folder:
 
     ```
     dotnet new console --name EventPublisher --output .
@@ -213,7 +213,7 @@ In this exercise, you created a new subscription, validated its registration and
 
     > **Note**: The **dotnet add package** command will add the **Bogus** package from NuGet. For more information, go to [Bogus](https://www.nuget.org/packages/Bogus/28.4.4).
 
-1.  Using the same terminal, build the .NET Core web application:
+1.  Using the same terminal, build the .NET web application:
 
     ```
     dotnet build
@@ -320,7 +320,7 @@ In this exercise, you created a new subscription, validated its registration and
 
 1.  Save the **Program.cs** file.
 
-1.  Using a terminal, run the ASP.NET Core web application project:
+1.  Using a terminal, run the ASP.NET web application project:
 
     ```
     dotnet run
@@ -344,7 +344,7 @@ In this exercise, you created a new subscription, validated its registration and
 
 #### Review
 
-In this exercise, you published new events to your Event Grid topic using a .NET Core console application.
+In this exercise, you published new events to your Event Grid topic using a .NET console application.
 
 ### Exercise 4: Clean up your subscription 
 
