--- a/Instructions/Labs/AZ-203_11_lab.md
+++ b/Instructions/Labs/AZ-203_11_lab.md
@@ -1,21 +1,29 @@
 ---
 lab:
-    title: 'Lab: Asynchronously processing messages using Azure Storage Queues'
+    title: 'Lab: Asynchronously processing messages by using Azure Queue storage'
     module: 'Module 11: '
 ---
 
-# Lab: Asynchronously processing messages using Azure Storage Queues
+# Lab: Asynchronously processing messages by using Azure Storage Queues
 # Student lab manual
 
 ## Lab scenario
 
-<!-- TODO: Write Lab Scenario -->
+You're studying various ways to communicate between isolated service components in Microsoft Azure, and you have decided to evaluate the Azure Storage service and its Queue service offering. As part of this evaluation, you'll build a prototype application in .NET that can send and receive messages so that you can measure the complexity involved in using this service. To help you with your evaluation, you've also decided to use Azure Storage Explorer as the queue message producer/consumer throughout your tests.
 
 ## Objectives
 
 After you complete this lab, you will be able to:
-
--  <!-- TODO: Write Lab Objectives -->
+ 
+-   Add **Azure.Storage** libraries from NuGet.
+ 
+-   Create a queue in .NET.
+ 
+-   Produce a new message in the queue by using .NET.
+ 
+-   Consume a message from the queue by using .NET.
+ 
+-   Manage a queue by using Storage Explorer.
 
 ## Lab setup
 
@@ -41,7 +49,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 -   Visual Studio Code
 
--   Azure Storage Explorer
+-   Storage Explorer
 
 ### Exercise 1: Create Azure resources
 
@@ -69,23 +77,23 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
     -   Access tier: **Hot**
 
-1.  Wait for Azure to finish creating the storage account before you move forward with the lab. You'll receive a notification when the account is created.
+    > **Note**: Wait for Azure to finish creating the storage account before you move forward with the lab. You'll receive a notification when the account is created.
 
-1.  Access the **Access Keys** blade of your newly created storage account instance.
+1.  Find the **Access Keys** blade of your newly created storage account instance.
 
 1.  Record the value of the **Connection string** box. You'll use this value later in this lab.
 
 #### Review
 
-In this exercise, you created a new Azure Storage account that you will use through the remainder of the lab.
+In this exercise, you created a new Storage account that you'll use through the remainder of the lab.
 
-### Exercise 2: Configure Azure Storage SDK in .NET Core project 
+### Exercise 2: Configure the Azure Storage SDK in a .NET project 
 
-#### Task 1: Create .NET Core project
+#### Task 1: Create a .NET project
 
 1.  Using Visual Studio Code, open the **Allfiles (F):\\Allfiles\\Labs\\11\\Starter\\MessageProcessor** folder.
 
-1.  Using a terminal, create a new .NET Core project named **MessageProcessor** in the current folder:
+1.  Using a terminal, create a new .NET project named **MessageProcessor** in the current folder:
 
     ```
     dotnet new console --name MessageProcessor --output .
@@ -101,7 +109,7 @@ In this exercise, you created a new Azure Storage account that you will use thro
 
     > **Note**: The **dotnet add package** command will add the **Azure.Storage.Queues** package from NuGet. For more information, go to [Azure.Storage.Queues](https://www.nuget.org/packages/Azure.Storage.Queues/12.0.0).
 
-1.  Using the same terminal, build the .NET Core web application:
+1.  Using the same terminal, build the .NET web application:
 
     ```
     dotnet build
@@ -139,27 +147,27 @@ In this exercise, you created a new Azure Storage account that you will use thro
     }
     ```
 
-1.  Update the **storageConnectionString** string constant by setting its value to the **Connection string** of the Storage account that you recorded earlier in this lab.
+1.  Update the **storageConnectionString** string constant by setting its value to the **Connection string** of the storage account that you recorded earlier in this lab.
 
 #### Task 3: Validate Azure Storage access
 
-1.  In the **Main** method, add the following block of code to connect to the storage account and to asynchronously create the queue if it does not already exist:
+1.  In the **Main** method, add the following block of code to connect to the storage account and to asynchronously create the queue if it doesn't already exist:
 
     ```
     QueueClient client = new QueueClient(storageConnectionString, queueName);        
     await client.CreateAsync();
     ```
 
-1.  Still in the **Main** method, add the following block of code to render the URI of the queue endpoint:
+1.  Still in the **Main** method, add the following block of code to render the Uniform Resource Identifier (URI) of the queue endpoint:
 
     ```
-    Console.WriteLine($"---Account Metdata---");
+    Console.WriteLine($"---Account Metadata---");
     Console.WriteLine($"Account Uri:\t{client.Uri}");
     ```
 
 1.  Save the **Program.cs** file.
 
-1.  Using a terminal, run the ASP.NET Core web application project:
+1.  Using a terminal, run the ASP.NET web application project:
 
     ```
     dotnet run
@@ -173,15 +181,15 @@ In this exercise, you created a new Azure Storage account that you will use thro
 
 #### Review
 
-In this exercise, you configured your .NET Core project to access the Azure Storage service and manipulate a queue made available through the service.
+In this exercise, you configured your .NET project to access the Storage service and manipulate a queue made available through the service.
 
-### Exercise 3: Add messages to queue 
+### Exercise 3: Add messages to the queue 
 
 #### Task 1: Write code to access queue messages
 
 1.  In the **Main** method, perform the following actions:
 
-    1.  Render a header using the **Console.WriteLine** static method:
+    1.  Render a header by using the **Console.WriteLine** static method:
 
         ```
         Console.WriteLine($"---Existing Messages---");
@@ -211,7 +219,7 @@ In this exercise, you configured your .NET Core project to access the Azure Stor
 
 1.  Save the **Program.cs** file.
 
-1.  Using a terminal, build the ASP.NET Core web application project:
+1.  Using a terminal, build the ASP.NET web application project:
 
     ```
     dotnet build
@@ -221,9 +229,9 @@ In this exercise, you configured your .NET Core project to access the Azure Stor
 
 1.  Close the current terminal.
 
-#### Task 2: Test queue message access
+#### Task 2: Test message queue access
 
-1.  Using a terminal, run the ASP.NET Core web application project:
+1.  Using a terminal, run the ASP.NET web application project:
 
     ```
     dotnet run
@@ -231,17 +239,17 @@ In this exercise, you configured your .NET Core project to access the Azure Stor
 
     > **Note**: If there are any build errors, review the **Program.cs** file in the **Allfiles (F):\\Allfiles\\Labs\\11\\Solution\\MessageProcessor** folder.
 
-1.  Observe the output from the currently running console application. The output indicates that there are no messages in the queue.
+1.  Observe the output from the currently running console application. The output indicates that no messages are in the queue.
 
 1.  Close the current terminal.
 
-1.  Access the **asyncstor*yourname*** Storage account that you created earlier in this lab.
+1.  Find the **asyncstor*yourname*** Storage account that you created earlier in this lab.
 
-1.  In the **Overview** section of the blade, select **Open in Explorer** to open the Storage account by using the **Azure Storage Explorer**.
+1.  In the **Overview** section of the blade, select **Open in Explorer** to open the Storage account by using Storage Explorer.
 
-1.  In the **Azure Storage Explorer** application, within the  =**asyncstor*yourname*** node for the Storage account that you created earlier in this lab, locate and open the **messagesqueue** queue.
+1.  In Storage Explorer, within the **asyncstor*yourname*** node for the Storage account that you created earlier in this lab, find and open the **messagequeue** queue.
 
-1.  Add a new message to the queue with the following properties
+1.  Add a new message to the queue with the following properties:
 
     -   Message text: **Hello World**
 
@@ -249,9 +257,9 @@ In this exercise, you configured your .NET Core project to access the Azure Stor
 
     -   Encode message body in Base 64: **No**
 
-1.  Return to the **Visual Studio Code** application.
+1.  Return to the Visual Studio Code application.
 
-1.  Using a terminal, run the ASP.NET Core web application project:
+1.  Using a terminal, run the ASP.NET web application project:
 
     ```
     dotnet run
@@ -259,15 +267,15 @@ In this exercise, you configured your .NET Core project to access the Azure Stor
 
     > **Note**: If there are any build errors, review the **Program.cs** file in the **Allfiles (F):\\Allfiles\\Labs\\11\\Solution\\MessageProcessor** folder.
 
-1.  Observe the output from the currently running console application. The output includes the new message you created.
+1.  Observe the output from the currently running console application. The output includes the new message that you created.
 
 1.  Close the current terminal.
 
 #### Task 3: Delete queued messages
 
-1.  Within the **Visual Studio Code** window, open the **Program.cs** file.
+1.  In the **Visual Studio Code** window, open the **Program.cs** file.
 
-1.  Update the **foreach** loop's block of code to invoke the **DeleteMessageAsync** method of the **QueueMessage** class passing in the **MessageId** and **PopReceipt** properties of the **message** variable:
+1.  Update the **foreach** loop's block of code to invoke the **DeleteMessageAsync** method of the **QueueMessage** class, passing in the **MessageId** and **PopReceipt** properties of the *message* variable:
 
     ```
     foreach(QueueMessage message in messages?.Value)
@@ -277,7 +285,7 @@ In this exercise, you configured your .NET Core project to access the Azure Stor
     }
     ```
 
-1.  Using a terminal, run the ASP.NET Core web application project:
+1.  Using a terminal, run the ASP.NET web application project:
 
     ```
     dotnet run
@@ -285,48 +293,48 @@ In this exercise, you configured your .NET Core project to access the Azure Stor
 
     > **Note**: If there are any build errors, review the **Program.cs** file in the **Allfiles (F):\\Allfiles\\Labs\\11\\Solution\\MessageProcessor** folder.
 
-1.  Observe the output from the currently running console application. The message you created earlier in the lab still exists because it had not been deleted previously.
+1.  Observe the output from the currently running console application. The message that you created earlier in the lab still exists because it hasn't been deleted previously.
 
 1.  Close the current terminal.
 
-1.  Within the **Azure Storage Explorer** window, within the  =**asyncstor*yourname*** node for the Storage account that you created earlier in this lab, locate and open the **messagesqueue** queue.
+1.  In the **Azure Storage Explorer** window, within the  =**asyncstor*yourname*** node for the Storage account that you created earlier in this lab, find and open the **messagequeue** queue.
 
 1.  Observe the empty list of messages in the queue.
 
-    > **Note**: You may need to refresh the queue.
+    > **Note**: You might need to refresh the queue.
 
 #### Review
 
-In this exercise, you read and deleted existing messages from the Azure Storage queue using the .NET Core library.
+In this exercise, you read and deleted existing messages from the Storage queue by using the .NET library.
 
-### Exercise 4: Enqueue new messages using .NET Core
+### Exercise 4: Queue new messages by using .NET
 
 #### Task 1: Write code to create queue messages
 
-1.  Within the **Visual Studio Code** window, open the **Program.cs** file.
+1.  In the **Visual Studio Code** window, open the **Program.cs** file.
 
 1.  In the **Main** method, perform the following actions:
 
-    1.  Render a header using the **Console.WriteLine** static method:
+    1.  Render a header by using the **Console.WriteLine** static method:
 
         ```
         Console.WriteLine($"---New Messages---");
         ```
     
-    1.  Add the following block of code to create a new string variable named **greeting** with a value of **Hi, Developer** and then invoke the **SendMessageAsync** method of the **QueueClient** class using the **greeting** variable as a parameter:
+    1.  Add the following block of code to create a new string variable named *greeting* with a value of **Hi, Developer!**, and then invoke the **SendMessageAsync** method of the **QueueClient** class by using the *greeting* variable as a parameter:
 
         ```
         string greeting = "Hi, Developer!";
         await client.SendMessageAsync(greeting);
         ```
 
-    1.  Add the following block of code to render the content of the message you sent:
+    1.  Add the following block of code to render the content of the message that you sent:
 
         ```
         Console.WriteLine($"Sent Message:\t{greeting}");
         ```
 
-1.  Using a terminal, run the ASP.NET Core web application project:
+1.  Using a terminal, run the ASP.NET web application project:
 
     ```
     dotnet run
@@ -334,21 +342,21 @@ In this exercise, you read and deleted existing messages from the Azure Storage 
 
     > **Note**: If there are any build errors, review the **Program.cs** file in the **Allfiles (F):\\Allfiles\\Labs\\11\\Solution\\MessageProcessor** folder.
 
-1.  Observe the output from the currently running console application. The content of the new message you sent should be included in the output.
+1.  Observe the output from the currently running console application. The content of the new message that you sent should be in the output.
 
 1.  Close the current terminal.
 
-#### Task 2: View queue messages using Azure Storage Explorer
+#### Task 2: View queued messages by using Storage Explorer
 
-1.  Within the **Azure Storage Explorer** window, within the  =**asyncstor*yourname*** node for the Storage account that you created earlier in this lab, locate and open the **messagesqueue** queue.
+1.  In the **Azure Storage Explorer** window, within the  =**asyncstor*yourname*** node for the Storage account that you created earlier in this lab, find and open the **messagequeue** queue.
 
 1.  Observe the single new message in the list of messages in the queue.
 
-    > **Note**: You may need to refresh the queue.
+    > **Note**: You might need to refresh the queue.
 
 #### Review
 
-In this exercise, you created new messages in the queue using the .NET Core library for Azure Storage queues.
+In this exercise, you created new messages in the queue by using the .NET library for Storage queues.
 
 ### Exercise 5: Clean up your subscription 
 
