--- a/Instructions/Labs/AZ-203_12_lab.md
+++ b/Instructions/Labs/AZ-203_12_lab.md
@@ -17,7 +17,7 @@ After you complete this lab, you will be able to:
 
 -   Create an Application Insights resource.
 
--   Integrate Application Insights telemetry tracking into an ASP.NET Core web app and a resource built using the Web Apps feature of Azure App Service.
+-   Integrate Application Insights telemetry tracking into an ASP.NET web app and a resource built using the Web Apps feature of Azure App Service.
 
 ## Lab setup
 
@@ -87,7 +87,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
     -   Publish: **Code**
 
-    -	Runtime stack: **.NET Core 3.0**
+    -	Runtime stack: **.NET 3.0**
 
     -	Operating System: **Windows**
 
@@ -141,7 +141,7 @@ In this exercise, you created the resources that you'll use for the remainder of
 
 ### Exercise 2: Monitor a local web application by using Application Insights
 
-#### Task 1: Build a .NET Core Web API project
+#### Task 1: Build a .NET Web API project
 
 1.  Open Visual Studio Code.
 
@@ -149,7 +149,7 @@ In this exercise, you created the resources that you'll use for the remainder of
 
 1.  Use the Explorer pane in Visual Studio Code to open a new terminal that has the context set to the current working directory.
 
-1.  At the command prompt, create a new .NET Core Web API application named **SimpleApi** in the current directory:
+1.  At the command prompt, create a new .NET Web API application named **SimpleApi** in the current directory:
 
     ```
     dotnet new webapi --output . --name SimpleApi
@@ -161,7 +161,7 @@ In this exercise, you created the resources that you'll use for the remainder of
     dotnet add package Microsoft.ApplicationInsights.AspNetCore --version 2.7.1
     ```
 
-1.  Build the .NET Core web app:
+1.  Build the .NET web app:
 
     ```
     dotnet build
@@ -197,7 +197,7 @@ In this exercise, you created the resources that you'll use for the remainder of
 
 1.  If it's not already open, use the Explorer in Visual Studio Code to open a new terminal with the context set to the current working directory.
 
-1.  Build the .NET Core web app:
+1.  Build the .NET web app:
 
     ```
     dotnet build
@@ -207,7 +207,7 @@ In this exercise, you created the resources that you'll use for the remainder of
 
 1.  If it's not already open, use the Explorer in Visual Studio Code to open a new terminal with the context set to the current working directory.
 
-1.  Run the .NET Core web app.
+1.  Run the .NET web app.
 
     ```
     dotnet run
@@ -235,7 +235,7 @@ In this exercise, you created the resources that you'll use for the remainder of
 
 #### Review
 
-In this exercise, you created an API by using ASP.NET Core and configured it to stream application metrics to Application Insights. You then used the Application Insights dashboard to get performance details about your API.
+In this exercise, you created an API by using ASP.NET and configured it to stream application metrics to Application Insights. You then used the Application Insights dashboard to get performance details about your API.
 
 ### Exercise 3: Monitor a web app using Application Insights
 
