--- a/Instructions/Labs/AZ-203_02_lab.md
+++ b/Instructions/Labs/AZ-203_02_lab.md
@@ -85,7 +85,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
     -	Publish: **Code**
 
-    -	Runtime Stack: **.NET Core**
+    -	Runtime Stack: **.NET**
 
     -	Region: **East US**
 
