--- a/Instructions/Labs/AZ-203_07_lab.md
+++ b/Instructions/Labs/AZ-203_07_lab.md
@@ -89,11 +89,11 @@ In this exercise, you created a new application registration and recorded import
 
 ### Exercise 2: Obtain a token by using the MSAL.NET library
 
-#### Task 1: Create a .NET Core project
+#### Task 1: Create a .NET project
 
 1.  Using Visual Studio Code, open the **Allfiles (F):\\Allfiles\\Labs\\07\\Starter\\GraphClient** folder.
 
-1.  Using a terminal, create a new .NET Core project named **GraphClient** in the current folder:
+1.  Using a terminal, create a new .NET project named **GraphClient** in the current folder:
 
     ```
     dotnet new console --name GraphClient --output .
@@ -109,7 +109,7 @@ In this exercise, you created a new application registration and recorded import
 
     > **Note**: The **dotnet add package** command will add the **Microsoft.Identity.Client** package from NuGet. For more information, go to [Microsoft.Identity.Client](https://www.nuget.org/packages/Microsoft.Identity.Client/4.7.1).
 
-1.  Using the same terminal, build the .NET Core web application:
+1.  Using the same terminal, build the .NET web application:
 
     ```
     dotnet build
@@ -195,7 +195,7 @@ In this exercise, you created a new application registration and recorded import
 
 #### Task 4: Test the updated application
 
-1.  Using a terminal, run the .NET Core console application project:
+1.  Using a terminal, run the .NET console application project:
 
     ```
     dotnet run
@@ -241,7 +241,7 @@ In this exercise, you acquired a token from the Microsoft identity platform by u
 
     > **Note**: The **dotnet add package** command will add the **Microsoft.Graph.Auth** package from NuGet. For more information, go to [Microsoft.Graph.Auth](https://www.nuget.org/packages/Microsoft.Graph.Auth/1.0.0-preview.2).
 
-1.  Using the same terminal, build the .NET Core web application:
+1.  Using the same terminal, build the .NET web application:
 
     ```
     dotnet build
@@ -313,7 +313,7 @@ In this exercise, you acquired a token from the Microsoft identity platform by u
 
 #### Task 4: Test the updated application
 
-1.  Using a terminal, run the .NET Core console application project:
+1.  Using a terminal, run the .NET console application project:
 
     ```
     dotnet run
