--- a/Instructions/Labs/AZ-203_03_lab.md
+++ b/Instructions/Labs/AZ-203_03_lab.md
@@ -75,11 +75,11 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 1.  Open the **Properties** section of your newly created storage account instance.
 
-1.  Record the value in the **Primary Blob Service Endpoint** box. You'll use this value later in this lab.
+1.  Record the value in the **Primary Blob Service Endpoint** text box. You'll use this value later in this lab.
 
 1.  Open the **Access Keys** section of the storage account instance.
 
-1.  Record the value in the **Storage account name** box and any of the **Key** boxes. You'll use these values later in this lab.
+1.  Record the value in the **Storage account name** text box and any of the **Key** text boxes. You'll use these values later in this lab.
 
 #### Review
 
