--- a/Instructions/Labs/AZ-203_06_lab.md
+++ b/Instructions/Labs/AZ-203_06_lab.md
@@ -77,7 +77,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 1.  Open the **Access Keys** blade of your newly created storage account instance.
 
-1.  Record the value in the **Connection string** box. You'll use this value later in this lab.
+1.  Record the value in the **Connection string** text box. You'll use this value later in this lab.
 
 #### Task 3: Create an Azure key vault
 
@@ -149,7 +149,7 @@ In this exercise, you created all the resources that you'll use for this lab.
 
 1.  Select through the secret to find the metadata for its latest version.
 
-1.  Record the value of the **Secret Identifier** box because you'll use this later in the lab.
+1.  Record the value of the **Secret Identifier** text box because you'll use this later in the lab.
 
 #### Task 3: Configure a Key Vault access policy
 
