--- a/Instructions/Labs/AZ-203_08_lab.md
+++ b/Instructions/Labs/AZ-203_08_lab.md
@@ -51,7 +51,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 1.  If this is your first time signing in to the Azure portal, you'll notice a dialog box offering a tour of the portal. Select the **Get Started** button to skip the tour.
 
-#### Task 2: Create an Azure web app resource by using an httpbin container image
+#### Task 2: Create a web app by using Azure App Service resource by using an httpbin container image
 
 1.  Create a new web app with the following details:
 
@@ -93,7 +93,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 1.  Access the **Properties** section of the **Web App** blade.
 
-1.  In the **Properties** section, record the value of the **URL** box. You'll use this value later in the lab to make requests against the API.
+1.  In the **Properties** section, record the value of the **URL** text box. You'll use this value later in the lab to make requests against the API.
 
 #### Review
 
