--- a/Instructions/Labs/AZ-203_10_lab.md
+++ b/Instructions/Labs/AZ-203_10_lab.md
@@ -71,7 +71,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 1.  Use the **az provider list** command again with the **--query "[].namespace"** flag to list just the namespaces of the currently registered providers.
 
-1.  Observe the list of currently registered providers. The **Microsoft.CDN** provider isn't currently in the list of providers.
+1.  Observe the list of currently registered providers. The **Microsoft.EventGrid** provider isn't currently in the list of providers.
 
 1.  Use the **az provider register** command with the **--help** flag to get the required flags to register a new provider.
 
@@ -133,7 +133,7 @@ In this exercise, you created the Event Grid topic and Web App that you will use
 
 1.  Access the **eventviewer*yourname*** web app that you created earlier in this lab.
 
-1.  In the **Settings** section, go to the **Properties** section, and then record the value of the **URL** box. You'll use this value later in the lab.
+1.  In the **Settings** section, go to the **Properties** section, and then record the value of the **URL** text box. You'll use this value later in the lab.
 
 1.  Browse to the currently running web app.
 
@@ -177,7 +177,7 @@ In this exercise, you created the Event Grid topic and Web App that you will use
 
 1.  Record the value of the **Topic Endpoint** field. You'll use this value later in the lab.
 
-1.  In the **Settings** section, go to the **Access keys** section, and then record the value of the **Key 1** box. You'll use this value later in the lab.
+1.  In the **Settings** section, go to the **Access keys** section, and then record the value of the **Key 1** text box. You'll use this value later in the lab.
 
 #### Review
 
