--- a/Instructions/Labs/AZ-203_11_lab.md
+++ b/Instructions/Labs/AZ-203_11_lab.md
@@ -81,7 +81,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 1.  Find the **Access Keys** blade of your newly created storage account instance.
 
-1.  Record the value of the **Connection string** box. You'll use this value later in this lab.
+1.  Record the value of the **Connection string** text box. You'll use this value later in this lab.
 
 #### Review
 
