--- a/Instructions/Labs/AZ-203_01_lab.md
+++ b/Instructions/Labs/AZ-203_01_lab.md
@@ -79,7 +79,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 1.  Access the **Access Keys** blade of your newly created storage account instance.
 
-1.  Record the value of the **Connection string** box. You'll use this value later in this lab.
+1.  Record the value of the **Connection string** text box. You'll use this value later in this lab.
 
 #### Task 3: Upload a sample blob
 
@@ -137,7 +137,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 1.  In the **Settings** section, find the **Properties** section.
 
-1.  In the **Properties** section, copy the value of the **URL** box. You'll use this value later in the lab.
+1.  In the **Properties** section, copy the value of the **URL** text box. You'll use this value later in the lab.
 
 #### Task 6: Deploy an ASP.NET web application to Web Apps
 
@@ -233,7 +233,7 @@ In this exercise, you created a web app in Azure and then deployed your ASP.NET 
     
     -   Deployment slot setting: **Not selected**
 
-    > **Note**: Make sure you include the protocol, such as **https://**, in the URL that you copy into the **Value** box for this application setting.
+    > **Note**: Make sure you include the protocol, such as **https://**, in the URL that you copy into the **Value** text box for this application setting.
 
 1.  Save your changes to the application settings.
 
