--- a/Instructions/Labs/AZ-203_04_lab.md
+++ b/Instructions/Labs/AZ-203_04_lab.md
@@ -95,7 +95,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 1.  Go to the blade for your newly created Azure Cosmos DB account resource, and then open the Keys pane.
 
-1.  In the Keys pane, record the value of the **PRIMARY CONNECTION STRING** box. 
+1.  In the Keys pane, record the value of the **PRIMARY CONNECTION STRING** text box. 
 
     > **Note**: You'll use these values later in this lab.
 
@@ -137,7 +137,7 @@ In this exercise, you created all the Azure resources that you'll need for a pol
 
 1.  Go to the new **images** container, and then open the Properties pane.
 
-1.  In the Properties pane, record the value in the **URL** box.
+1.  In the Properties pane, record the value in the **URL** text box.
 
     > **Note**: You'll use this value later in this lab.
 
