--- a/Instructions/Labs/AZ-203_07_lab.md
+++ b/Instructions/Labs/AZ-203_07_lab.md
@@ -77,9 +77,9 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 1.  Browse to **Overview** of the **graphapp*yourname*** application registration blade.
 
-1.  Find and record the value of the **Application (client) ID** box. You'll use this value later in the lab.
+1.  Find and record the value of the **Application (client) ID** text box. You'll use this value later in the lab.
 
-1.  Find and record the value of the **Directory (tenant) ID** box. You'll use this value later in the lab.
+1.  Find and record the value of the **Directory (tenant) ID** text box. You'll use this value later in the lab.
 
 1.  Close the currently open browser window.
 
