--- a/Instructions/Labs/AZ-203_12_lab.md
+++ b/Instructions/Labs/AZ-203_12_lab.md
@@ -75,9 +75,9 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 1.  Access the **Properties** section of the **Application Insights** blade.
 
-1.  Get the value of the **Instrumentation Key** box. This key is used by client applications to connect to Application Insights.
+1.  Get the value of the **Instrumentation Key** text box. This key is used by client applications to connect to Application Insights.
 
-#### Task 3: Create an Azure Web Apps resource
+#### Task 3: Create a web app by using Azure App Services resource
 
 1.  Create a new **web app** with the following details:
 
@@ -113,7 +113,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 1.  Access the **Properties** section of the **App Service** blade.
 
-1.  Record the value of the **URL** box. You'll use this value later in the lab to make requests against the API.
+1.  Record the value of the **URL** text box. You'll use this value later in the lab to make requests against the API.
 
 #### Task 4: Configure web app autoscale options
 
